# basic-visual

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh
ast/: CMakeLists.txt
ast/inc/: ast.hpp  compile.hpp  exprtree.hpp  interpret.hpp  serializer.hpp  state.hpp
ast/src/: ast.cpp  compile.cpp  exprtree.cpp  interpret.cpp  serializer.cpp  state.cpp
basicVisual/: CMakeLists.txt  ast.cpp  ast.h  exprtree.cpp  exprtree.h  instruction.cpp  instruction.h  instructioncontainer.cpp  instructioncontainer.h  instructiondialog.cpp  interpret.cpp  interpret.h  maingraphicsview.cpp  maingraphicsview.hpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  state.cpp  state.h
basicVisual/inc/: ast.h  exprtree.h  instruction.h  instructioncontainer.h  instructiondialog.h  interpret.h  maingraphicsscene.hpp  maingraphicsview.hpp  mainwindow.h  mainwindow.hpp  pseudoterminal.hpp  serializable.h  serializer.h  state.h
basicVisual/src/: ast.cpp  exprtree.cpp  instruction.cpp  instructioncontainer.cpp  instructiondialog.cpp  instructiondialog.ui  interpret.cpp  main.cpp  maingraphicsscene.cpp  maingraphicsview.cpp  mainwindow.cpp  mainwindow.ui  pseudoterminal.cpp  pseudoterminal.ui  serializer.cpp  state.cpp
basicVisual/tests/: test_ast.cpp
build-basicVisual-Desktop_Qt_6_2_0_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-basicVisual-Desktop_Qt_6_2_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-3c78058c396a546eca0c.json  cmakeFiles-v1-a12361f7bc72fb0009e7.json  codemodel-v2-51626e149a74a55fa503.json  index-2021-11-18T14-57-11-0517.json  target-basicVisual-Debug-7ae388e14b51bc86ea4d.json  target-basicVisual_autogen-Debug-f3d2fdc54a584b1305ad.json  target-basicVisual_autogen_timestamp_deps-Debug-aa3f5a465c1e5462a8bd.json
specification/: specification.md
specification/diagrams_source_files/: README.txt  class_diagram_update.drawio  coding.vpd  component_diagram.vpd  open_file.vpd  running_the_code (with steps).vpd  running_the_code (without steps).vpd  saving_the_code.vpd  use_cases_diagram.drawio
specification/use_cases/: use_cases.md
specification/use_cases/coding/: coding.md  coding_new_program.md
specification/use_cases/open_file/: open_file.md  openfile.md
specification/use_cases/running_the_code/: running_the_code.md
specification/use_cases/saving_the_code/: saving_the_code.md
specification/use_cases/using_the_application/: using_the_application.md
specification/use_cases/xml_diagram_files/: use_cases_diagram.drawio
specification/xml_diagram_files/: README.txt  class_diagram.drawio
tests/: CMakeLists.txt  main.cpp  test_ast.cpp
